--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<%= form_for :post, url:posts_path do |f| %>
+ <% if @post.errors.any?  %>
+   <% @post.errors.full_messages.each do |msg| %>
+   <li><%= msg%></li>
+   <%end%>
+   <%end%>
+
+<%= render 'posts/form', f:f %>
+
+<% end %>
